# KinBech

./: README.md  datadump.json  db.sqlite3  pyproject.toml  requirements.txt
authentication/: urls.py  views.py
authentication/templates/authentication/: customerLogin.html  customerRegistration.html  sellerLogin.html  sellerRegister.html
ecommerce/: settings.py  urls.py
seller/: context_processors.py  urls.py  views.py
seller/templates/seller/: emailMessage.html  sellerHome.html  sellerMain.html  sellerOrderDetail.html  sellerOrderList.html  sellerProductAdd.html  (+5 more)
static/css/: authentication.css  sellerStyle.css  style.css
static/images/: shoes-4.jfif
static/js/: cart.js  seller.js
store/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py  0002_product_price.py  0003_product_image.py  0004_auto_20210331_0019.py  0005_auto_20210404_1739.py  0006_category_image.py  0007_auto_20210406_1334.py  0008_remove_customer_email.py  0009_auto_20210407_1959.py  0010_seller.py  0011_order_order_status.py  0012_product_seller.py  0013_auto_20210415_1004.py  0014_product_view_count.py  0015_orderitem_orderitem_order_status.py  0016_remove_order_order_status.py  0017_productimage.py  0018_order_noti_status.py  0019_auto_20210424_2035.py  0020_auto_20210428_0858.py  0021_productcomment.py  0022_recommendation.py  0023_product_date_added.py  0024_product_disable.py  0025_product_discount.py  0026_product_brand.py  0027_auto_20210602_2012.py  0028_auto_20210602_2013.py  0029_auto_20210710_2034.py
(+25 files in other folders)
